// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the style output of GridX 1`] = `
<xy-grid-element__XYGridElement
  alignX="left"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</xy-grid-element__XYGridElement>
`;

exports[`the style output of GridX with alignment to bottom 1`] = `
<xy-grid-element__XYGridElement
  alignX="left"
  alignY="bottom"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</xy-grid-element__XYGridElement>
`;

exports[`the style output of GridX with alignment to center 1`] = `
<xy-grid-element__XYGridElement
  alignX="center"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</xy-grid-element__XYGridElement>
`;

exports[`the style output of GridX with alignment to justify 1`] = `
<xy-grid-element__XYGridElement
  alignX="justify"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</xy-grid-element__XYGridElement>
`;

exports[`the style output of GridX with alignment to middle 1`] = `
<xy-grid-element__XYGridElement
  alignX="left"
  alignY="middle"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</xy-grid-element__XYGridElement>
`;

exports[`the style output of GridX with alignment to right 1`] = `
<xy-grid-element__XYGridElement
  alignX="right"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</xy-grid-element__XYGridElement>
`;

exports[`the style output of GridX with alignment to spaced 1`] = `
<xy-grid-element__XYGridElement
  alignX="spaced"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</xy-grid-element__XYGridElement>
`;

exports[`the style output of GridX with alignment to stretch 1`] = `
<xy-grid-element__XYGridElement
  alignX="left"
  alignY="stretch"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</xy-grid-element__XYGridElement>
`;

exports[`the style output of GridX with alignment to top 1`] = `
<xy-grid-element__XYGridElement
  alignX="left"
  alignY="top"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</xy-grid-element__XYGridElement>
`;
